feat: clean projet